tests/p15c0.rc
int x;
int a[4];

bool* r = &x;
bool* b = a; //error
